<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_networking_api_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/networking_api"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_networking_api"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_networking_api_heading">

        <RadioButton
            android:id="@+id/rd_http_url_connection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/http_url_connection" />

        <RadioButton
            android:id="@+id/rd_volley"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/volley" />

        <RadioButton
            android:id="@+id/rd_retrofit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/retrofit" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_students_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/students"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_networking_api" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/btn_all_students"
        app:layout_constraintTop_toBottomOf="@id/tv_students_heading">

        <TextView
            android:id="@+id/tv_students_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

    </ScrollView>

    <Button
        android:id="@+id/btn_all_students"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/all"
        app:layout_constraintBottom_toTopOf="@id/btn_delhi_students"
        app:layout_constraintEnd_toStartOf="@+id/btn_male_students"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_male_students"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/male"
        app:layout_constraintBottom_toTopOf="@id/btn_delhi_students"
        app:layout_constraintEnd_toStartOf="@+id/btn_female_students"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_all_students" />

    <Button
        android:id="@+id/btn_female_students"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/female"
        app:layout_constraintBottom_toTopOf="@id/btn_delhi_students"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_male_students" />

    <Button
        android:id="@+id/btn_delhi_students"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delhi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_mumbai_students"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_mumbai_students"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mumbai"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_banglore_students"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_delhi_students" />

    <Button
        android:id="@+id/btn_banglore_students"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/banglore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_mumbai_students" />

</androidx.constraintlayout.widget.ConstraintLayout>